2004-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c: (totem_scrsaver_class_init),
	(totem_scrsaver_new), (fake_event), (totem_scrsaver_init),
	(totem_scrsaver_disable), (totem_scrsaver_enable),
	(totem_scrsaver_finalize):
	* src/scrsaver.h:
	* src/totem-pl-parser.h:
	* src/totem-private.h:
	* src/totem.c: (totem_action_fullscreen_toggle),
	(video_widget_create): turn the ScreenSaver struct into the
	TotemScrsaver GObject

2004-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (treeview_row_changed): when double-clicking
	we need to to reactivate the drop target after the row activation so
	that drag'n'drop works again (Closes: #155702)

2004-10-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_init),
	(setup_config): move the debug before xine_init() so that we can
	debug the plugins loading for example

2004-10-28  Bastien Nocera  <hadess@hadess.net>

	* data/totem.desktop.in.in: tell the mime DB we support URLs

2004-10-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_disc_is_cdda): sometimes, CD drives
	don't implement getting the CD type (should fix #156679)

2004-10-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  No warnings on console #2.

2004-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/test-parser.c: (header), (test_relative_real),
	(test_relative), (entry_added), (test_parsing_real), (push_parser),
	(test_parsing), (main): add parsing tests to the relative paths ones
	* src/totem-disc.c: (cd_cache_open_mountpoint),
	(cd_cache_file_exists), (cd_cache_disc_is_vcd),
	(cd_cache_disc_is_dvd): speed up DVD and VCD checking by stat()'ing
	for filenames, instead of parsing the subdirectories
	* src/totem-pl-parser.c: (totem_pl_parser_add_directory),
	(totem_pl_parser_parse_internal): check if a directory is a VCD or