@@ -1,3 +1,10 @@
+2004-11-01  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-private.h:
+	* src/totem.c: (update_seekable), (on_skip_to1_activate):
+	when Skip to... is grayed out, "S" shouldn't bring up the skip
+	to dialog (Closes: #157031)
+
 2004-10-31  Bastien Nocera  <hadess@hadess.net>
 
 	* src/scrsaver.c: (totem_scrsaver_class_init),
